tests/negative/lexer/char-invalid.orng
fn main() -> Int {
    let x = '\d'
    0
}